<resources>
    <string name="app_name">Movie Application</string>
    <string name="movie">Movie</string>
    <string name="my_page">My Page</string>
    <string name="movie_title">What?\n to See</string>
    <string name="movie_daily_boxOffice">Daily BoxOffice</string>
    <string name="movie_weekly_boxOffice">Weekly BoxOffice</string>
    <string name="dialog_fragment_movie_movie_info_genre">Genre</string>
    <string name="dialog_fragment_movie_movie_info_director">Director</string>
    <string name="dialog_fragment_movie_movie_info_actors">Actors</string>
    <string name="dialog_fragment_movie_movie_info_add_favorite">즐겨찾기 추가</string>
    <string name="dialog_fragment_movie_movie_info_close">닫기</string>
    <string name="mypage_favorites">Favorites</string>
    <string name="my_page_btn_favorite_delete">MyPage Favorite Movie Deletion Button</string>
    <string name="my_page_fragment_sure_you_delete">삭제하시겠습니까?</string>
    <string name="cancel">취소</string>
    <string name="accept">확인</string>
    <string name="my_page_viewmodel_failed_to_load_list">목록 불러오기 실패..</string>
    <string name="dialog_fragment_movie_movie_info_story">Story</string>
</resources>