<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:padding="16dp">


        <TextView
            android:id="@+id/tv_dialog_fragment_movie_movie_info_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textColor="@color/black"
            android:textSize="28sp"
            app:layout_constraintBottom_toTopOf="@id/layout_dialog_fragment_movie_movie_info_genres"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="Title" />

        <LinearLayout
            android:id="@+id/layout_dialog_fragment_movie_movie_info_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/layout_dialog_fragment_movie_movie_info_genres"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_dialog_fragment_movie_movie_info_title">

            <TextView
                android:id="@+id/tv_dialog_fragment_movie_movie_info_audit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:gravity="start"
                android:textSize="14sp"
                tools:text="Audit" />

            <TextView
                android:id="@+id/tv_dialog_fragment_movie_movie_info_runningTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:gravity="start"
                android:textSize="14sp"
                tools:text="Running Time" />

            <TextView
                android:id="@+id/tv_dialog_fragment_movie_movie_info_releaseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:gravity="start"
                android:textSize="14sp"
                tools:text="Release Date" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_dialog_fragment_movie_movie_info_genres"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/layout_dialog_fragment_movie_movie_info_actors"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_dialog_fragment_movie_movie_info_info">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/dialog_fragment_movie_movie_info_genre"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_dialog_fragment_movie_movie_info_title_genres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_dialog_movie_info" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_dialog_fragment_movie_movie_info_actors"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/layout_dialog_fragment_movie_movie_info_directors"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_dialog_fragment_movie_movie_info_genres">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/dialog_fragment_movie_movie_info_actors"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_dialog_fragment_movie_movie_info_title_actors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_dialog_movie_info" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_dialog_fragment_movie_movie_info_directors"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/layout_dialog_fragment_movie_movie_info_buttons"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_dialog_fragment_movie_movie_info_actors">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/dialog_fragment_movie_movie_info_director"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_dialog_fragment_movie_movie_info_title_directors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_dialog_movie_info" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_dialog_fragment_movie_movie_info_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_dialog_fragment_movie_movie_info_directors">

            <TextView
                android:id="@+id/tv_dialog_fragment_movie_movie_info_add_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:text="@string/dialog_fragment_movie_movie_info_add_favorite"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_dialog_fragment_movie_movie_info_add_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_fragment_movie_movie_info_close"
                android:textSize="16sp" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>